<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Synchro Music</string>
    <string name="title_activity_rules_approval">RulesApprovalActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_largeText">Welcome in your new favourite app!</string>
    <string name="welcome_textView">Before yoy will start please accept the rures. After that Quick Settings View will be opened.</string>
    <string name="rolesAcceptance">I am accepting the rules</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">"Nickname</string>
    <string name="pref_username_desc">Your identificator</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_simple">Basics</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="welcome_user">Welcome my Lord!</string>
    <string name="start_server">Start Broadcasting</string>
    <string name="start_client">Connect to server</string>
    <string name="settings">Settings</string>
    <string name="title_activity_server_main">ServerMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="time_zero">0:00</string>
    <string name="add_track">Add track></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_disabled">WiFi disabled!</string>
    <string name="wifi_enable">Synchro Music requires Wifi turned on.\nEnable WiFi?</string>
    <string name="wifi_enabled">WiFi enabled</string>
    <string name="title_activity_client_main">ClientMainActivity</string>
	<string name="availible_servers">Servers</string>
	<string name="pref_user_title">User</string>
	<string name="pref_connection_title">Connection</string>
	<string name="pref_connection_mode">Connection mode</string>
	<string-array name="pref_connection_modes">
	    <item>WiFi network</item>
	    <item>WiFi NSD</item>
	</string-array>
	<string-array name="pref_connection_modes_values">
	    <item>"0"</item>
	    <item>"1"</item>
	</string-array>
	<string name="pref_connection_mode_default">0</string>
	<string name="pref_connection_mode_desc">How clients will be connected</string>
</resources>
