<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal" >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="7"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/artist_textView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/artist"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|right"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/time_zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
